menambah & mengedit beberapa file

--- a/CSS3_Gallery/index.html
+++ b/CSS3_Gallery/index.html
@@ -5,9 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gallery CSS & HTML</title>
-    <link rel="stylesheet" href="css/style.css" title="style.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    
+
+    <h1>Web Programming</h1>
+
+    <div class="container">
+
+        <ul class="gallery">
+            
+            <li>
+                <a href="#a">
+                    <img src="img/thumbs/thumb-html.png" alt="LOGO HTML" class="ab" />
+                    <span>HTML</span>
+                </a>
+                <div class="overlay" id="a">
+                    <a href="#" class="close">
+                        X
+                    </a>
+                    <a href="#d" class="left"></a>
+                    <img src="img/full/logo-html.png" alt="LOGO HTML" />
+                    <a href="#b" class="right"></a>
+                </div>
+            </li>
+
+        </ul>
+    </div>
+
+
 </body>
 </html>
